Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18737

Spider "Out of memory" on armv7hl

    XMLWordPrintable

Details

    Description

      Hello from the Fedora project,

      With recent 10.3.13 new bug has emerged, however it triggers only on armv7hl architecture.

      Each time, the Spider SE testsuite is being run, it fails most of the tests with:

      Failed 47/51 tests
      

      The bug doesn't seem to exist on previous versions, nor different architectures (as far as I can test), nor different parts of the testsuite.

      All of the tests fails with specific error, where only the number differs (somewhere between 2,5GB - 3,2GB )

      [ERROR] mysqld: Out of memory (Needed 3062627376 bytes)
      

      The behaviour is 100% reproducible in our build system on Fedora 28 to Rawhide (latest developement version). That suggests it shouldn't be caused by something like a new GCC or other build requirements.

      Looking at 10.3.13 changelog, I'd blame this one:
      https://jira.mariadb.org/browse/MDEV-16520
      ... or any other Spider related commits.


      The Fedora web interface to package sources can be found here:
      https://src.fedoraproject.org/rpms/mariadb
      files here:
      https://src.fedoraproject.org/rpms/mariadb/tree/master

      I made pull request containing the rebase to 10.3.13:
      https://src.fedoraproject.org/rpms/mariadb/pull-request/11#request_diff

      The builds you can examine, for respective Fedora versions, can be found here:
      F30: https://koji.fedoraproject.org/koji/taskinfo?taskID=33033562
      F29: https://koji.fedoraproject.org/koji/taskinfo?taskID=33033608
      F28: https://koji.fedoraproject.org/koji/taskinfo?taskID=33033914

      The list of failing tests:

          spider/bg.spider3_fixes
          spider/bg.spider3_fixes_part
          spider/bg.spider_fixes
          spider/bg.spider_fixes_part
          spider/bg.basic_sql
          spider/bg.basic_sql_part
          spider/bg.direct_aggregate
          spider/bg.direct_aggregate_part
          spider/bg.direct_update
          spider/bg.direct_update_part
          spider/bg.function
          spider/bg.ha
          spider/bg.ha_part
          spider.spider3_fixes
          spider.spider3_fixes_part
          spider.spider_fixes
          spider.spider_fixes_part
          spider.auto_increment
          spider.basic_sql
          spider.basic_sql_part
          spider.checksum_table_with_quick_mode_3
          spider.direct_aggregate
          spider.direct_aggregate_part
          spider.direct_join
          spider.direct_join_using
          spider.direct_left_join
          spider.direct_left_join_nullable
          spider.direct_left_right_join_nullable
          spider.direct_left_right_left_join_nullable
          spider.direct_right_join
          spider.direct_right_join_nullable
          spider.direct_right_left_join_nullable
          spider.direct_right_left_right_join_nullable
          spider.direct_update
          spider.direct_update_part
          spider.function
          spider.ha
          spider.ha_part
          spider.partition_cond_push
          spider.partition_fulltext
          spider.partition_join_pushdown_for_single_partition
          spider.partition_mrr
          spider.quick_mode_1
          spider.quick_mode_2
          spider.quick_mode_3
          spider.slave_trx_isolation
          spider.timestamp
      

      The parameters the Spider tests were ran with:

      perl ./mysql-test-run.pl
        --parallel=auto --force --retry=1 --suite-timeout=900 --testcase-timeout=30
        --mysqld=--binlog-format=mixed --force-restart --shutdown-timeout=60
        --max-test-fail=5  --skip-ssl --big-test --mem --suite=spider,spider/bg 
        --max-test-fail=999 || :
      

      Attaching the test logs for respective Fedora versions

      Attachments

        1. F28_test_log
          86 kB
        2. F29_test_log
          86 kB
        3. F30_test_log
          641 kB

        Activity

          People

            Kentoku Kentoku Shiba (Inactive)
            mschorm Michal Schorm
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.