MDEV-18737 Spider "Out of memory" on armv7hl

This is an issue of memory alignment of variable argument when calling my_multi_malloc().
The fix is strictly casting allocating size to "uint".